# waypipe-daemon

./: .gitignore  CMakeLists.txt  README.md  daemon.py
src/: client.c  client.h  common.c  common.h  daemon.c  daemon.h  logging.c  logging.h  protocol.c  protocol.h
src/client/: client.c  client.h
src/common/: common.c  common.h  logging.c  logging.h  protocol.c  protocol.h
src/daemon/: daemon.c
